[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemies/enemy.gd" type="Script" id=1]
[ext_resource path="res://_addons/health/health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="enemy" type="RigidBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 11
mode = 2
contacts_reported = 10
contact_monitor = true
can_sleep = false
linear_damp = 0.0
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]

[node name="health_bar" parent="." instance=ExtResource( 2 )]
margin_left = -8.0
margin_top = 14.0
margin_bottom = 17.0

[node name="tied_up_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="tied_up_sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.462745, 1, 1 )
position = Vector2( 0, -23 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="ouch_duration" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="timeout" from="tied_up_timer" to="." method="_on_tied_up_timer_timeout"]
